# ArUcoDetector

./: .gitignore  CMakeLists.txt  Makefile  README.md  android_build.bat
src/: ArUcoPlugin.cpp
